// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountForm /> should render a form 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
>
  <Field
    component={[Function]}
    id="account__email"
    label="Adresse électronique"
    labelClassName="col-sm-4"
    name="email"
    type="email"
    wrapperClassName="col-sm-6"
  />
  <p
    className="small excerpt col-sm-6 col-sm-offset-4"
  >
    Votre adresse électronique ne sera pas rendue publique.
  </p>
</form>
`;

exports[`<AccountForm /> should render a form with an alert if submitted password is wrong 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
>
  <Alert
    bsClass="alert"
    bsStyle="danger"
    closeLabel="Close alert"
  >
    <p>
      <FormattedHTMLMessage
        message="<strong>Mot de passe incorrect.</strong> Entrez votre mot de passe actuel pour modifier votre adresse email."
        tagName="span"
      />
    </p>
  </Alert>
  <Field
    component={[Function]}
    id="account__email"
    label="Adresse électronique"
    labelClassName="col-sm-4"
    name="email"
    type="email"
    wrapperClassName="col-sm-6"
  />
  <p
    className="small excerpt col-sm-6 col-sm-offset-4"
  >
    Votre adresse électronique ne sera pas rendue publique.
  </p>
</form>
`;

exports[`<AccountForm /> should render a form with an info if a confirmation email has been resent 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
>
  <Alert
    bsClass="alert"
    bsStyle="warning"
    closeLabel="Close alert"
  >
    <p>
      Un email de confirmation vous a été envoyé.
    </p>
  </Alert>
  <Field
    component={[Function]}
    id="account__email"
    label="Adresse électronique"
    labelClassName="col-sm-4"
    name="email"
    type="email"
    wrapperClassName="col-sm-6"
  />
  <p
    className="small excerpt col-sm-6 col-sm-offset-4"
  >
    Votre adresse électronique ne sera pas rendue publique.
  </p>
  <div
    className="col-sm-6 col-sm-offset-4"
  >
    <p
      className="small excerpt"
    >
      <FormattedHTMLMessage
        email="new-email@test.com"
        message="Vérifiez votre email (<strong>{email}</strong>) pour confirmer votre nouvelle adresse. Jusqu'à ce que vous confirmez, les notifications continueront d'être envoyées à votre adresse email actuelle."
        tagName="span"
      />
    </p>
    <p
      className="small excerpt"
    >
      <a
        href="#resend"
        onClick={[Function]}
      >
        Renvoyer la confirmation
      </a>
       · 
      <a
        href="#cancel"
        onClick={[Function]}
      >
        Annuler cette modification
      </a>
    </p>
  </div>
</form>
`;

exports[`<AccountForm /> should render a form with information about new email 1`] = `
<form
  className="form-horizontal"
  onSubmit={[Function]}
>
  <Field
    component={[Function]}
    id="account__email"
    label="Adresse électronique"
    labelClassName="col-sm-4"
    name="email"
    type="email"
    wrapperClassName="col-sm-6"
  />
  <p
    className="small excerpt col-sm-6 col-sm-offset-4"
  >
    Votre adresse électronique ne sera pas rendue publique.
  </p>
  <div
    className="col-sm-6 col-sm-offset-4"
  >
    <p
      className="small excerpt"
    >
      <FormattedHTMLMessage
        email="new-email@test.com"
        message="Vérifiez votre email (<strong>{email}</strong>) pour confirmer votre nouvelle adresse. Jusqu'à ce que vous confirmez, les notifications continueront d'être envoyées à votre adresse email actuelle."
        tagName="span"
      />
    </p>
    <p
      className="small excerpt"
    >
      <a
        href="#resend"
        onClick={[Function]}
      >
        Renvoyer la confirmation
      </a>
       · 
      <a
        href="#cancel"
        onClick={[Function]}
      >
        Annuler cette modification
      </a>
    </p>
  </div>
</form>
`;
